--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ .card-deck .card {
+   min-width: 220px;
+ }
+ .main-container {
+   margin-top: 75px;
+ }
