--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,37 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body><nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+
+      <div class="navbar-collapse" id="Facebook clone">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <%= link_to 'Browse events', root_path, class: 'nav-link' %>
+          </li>
+          <% if current_user %>
+            <li class="nav-item">
+              <%= link_to 'Sign out', destroy_user_session_url, method: :delete, class: 'nav-link' %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign in', new_user_session_url, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign up', new_user_registration_url, class: 'nav-link' %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+    <div class="main-container container">
+    <% if notice %>
+      <%= content_tag :div, notice, class: "alert alert-primary" %>
+    <% end %>
+    <% if alert %>
+      <%= content_tag :div, alert, class: "alert alert-danger" %>
+    <% end %>
     <%= yield %>
+</div>
   </body>
 </html>
